--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "syslog.h": "c",
-        "stat.h": "c"
+        "stat.h": "c",
+        "functional": "c"
     }
 }
